Primer trabajo con css

--- a/index.html
+++ b/index.html
@@ -2,23 +2,25 @@
 <html lang="es-ES">
     <head>
         <title>Mi Portafolio Personal</title>
+        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     </head>
     <body>
         <header>
             <nav>
                 <ul>
-                    <a href="#Acerca de mí">Acerca de mí</a>
-                    <a href="#Habilidades">Habilidades</a>
-                    <a href="#Experiencia">Experiencia</a>
-                    <a href="Proyectos">Proyectos</a>
-                    <a href="#Contacto">Contacto</a>
+                    <a class="menu-item" href="#Acerca de mí">Acerca de mí</a>
+                    <a class="menu-item" href="#Habilidades">Habilidades</a>
+                    <a class="menu-item" href="#Experiencia">Experiencia</a>
+                    <a class="menu-item" href="Proyectos">Proyectos</a>
+                    <a class="menu-item" href="#Contacto">Contacto</a>
                 </ul>
             </nav>
-            <h1>Mauricio Salas</h1>
+            <h1 style="color: red;">Mauricio Salas</h1>
             <h2>Web Developer</h2>
         </header>
         <main>
-            <section id="Acerca de mí">
+            <section id="Acerca-de-mí">
                 <h2>Acerca de mí</h2>
                 <p>
                     Ex profesor de inglés y asistente de traducción del inglés al castellano,
@@ -42,12 +44,12 @@
                     <li>
                         <b>Eurosur</b>
                         <ul>
-                            <li>Docente nivel básico pre-adolescentes.</li>
-                            <li>Responsable de 3 cursos.</li>
+                            <li>Profesor de inglés nivel básico.</li>
+                            <li>Nivel de inglés C2</li>
                         </ul>
                     </li>
                     <li>
-                        <strong>Traductor</strong>
+                        <strong>Asistente de Traductor</strong>
                         <ul>
                             <li>Traducción de documentos.</li>
                             <li>Corrección contextual de términos.</li>
@@ -72,11 +74,14 @@
                 <h2>Contacto</h2>
                 <ul>
                     <li>Email: maurisalas6@gmail.com</li>
-                    <li>Teléfono: 0985259313</li>
+                    <li>Teléfono: 0985-259313</li>
                     <li>Redes sociales:
                         <ul>
                             <li>
-                                <a href="https://www.facebook.com/mauri.salassilvero">Facebook</a>
+                                <a href="https://www.facebook.com/mauri.salassilvero" class="fa fa-facebook"></a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/MauriS24/Mi-Portafolio" class="fa fa-github"></a>
                             </li>
                             <!--Agrega más redes sociales si lo deseas-->
                         </ul>
